--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "author": "Mynameisjohndev <joaoantonio15161516@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "git-commit-msg-linter": "^4.1.3"
+    "@types/node": "^18.7.3",
+    "git-commit-msg-linter": "^4.1.3",
+    "typescript": "^4.7.4"
   }
 }
