--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Mynameisjohndev <joaoantonio15161516@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^28.1.6",
     "@types/node": "^18.7.3",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "eslint": "^8.21.0",
@@ -16,7 +17,9 @@
     "eslint-plugin-standard": "^5.0.0",
     "git-commit-msg-linter": "^4.1.3",
     "husky": "^8.0.1",
+    "jest": "^28.1.3",
     "lint-staged": "^13.0.3",
+    "ts-jest": "^28.0.7",
     "typescript": "^4.7.4"
   }
 }
